create 운영자 정산 집계 API